--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongodb": "^4.10.0",
     "rxjs": "^7.5.7",
     "typescript": "^4.4.2"
   },
