--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^16.0.3",
     "mongodb": "^4.10.0",
     "rxjs": "^7.5.7",
     "typescript": "^4.4.2"
@@ -18,6 +21,8 @@
     "nodemon": "nodemon"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
